# halo

./: Cargo.toml  README.md
assets/: WGSL.sublime-syntax
src/: editor.rs  main.rs  preferences.rs  theme.rs  validation.rs  viewer.rs  widget.rs
src/editor/: file.rs  highlighter.rs  validation.rs
src/viewer/: pipeline.rs  primitive.rs  shader.wgsl  uniforms.rs
src/viewer/shaders/: default_frag.wgsl  empty_frag.wgsl  halo.wgsl  uniforms.wgsl  vertex_shader.wgsl
