[package]
name = "shader_buddy"
version = "0.1.0"
edition = "2021"
authors = ["Shan <shankern@protonmail.com>"]

[dependencies]
bytemuck = "1.13.1"
thiserror = "1.0.47"

[dependencies.iced]
git = "https://github.com/bungoboingo/iced.git"
branch = "shader-widget"
features = ["advanced", "web-colors"]

[dependencies.wgpu]
version = "0.17"

[dependencies.naga]
version = "0.13.0"
features = ["wgsl-in"]

[dependencies.glam]
version = "0.24.2"
features = ["bytemuck"]