[package]
name = "halo"
version = "0.1.0"
edition = "2021"
authors = ["Shan <shankern@protonmail.com>"]

[dependencies]
bytemuck = "1.13.1"
thiserror = "1.0.47"

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
rev = "100d15f30654d446cffe2fb60a435c79c81b0188"
features = ["advanced", "web-colors"]

[dependencies.naga]
version = "0.14.1"
features = ["wgsl-in"]

[dependencies.glam]
version = "0.24.2"
features = ["bytemuck"]